@@ -1,11 +1,13 @@
 package apiCalls.Utils.generic;
 
-import activesupport.aws.s3.SecretsManager;
+import activesupport.http.RestUtils;
 import activesupport.system.Properties;
-import apiCalls.Utils.http.RestUtils;
+import activesupport.aws.s3.SecretsManager;
 import apiCalls.actions.Token;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.exceptions.JWTDecodeException;
+import com.auth0.jwt.interfaces.DecodedJWT;
+import io.restassured.response.ValidatableResponse;
 import org.apache.hc.core5.http.HttpException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -15,18 +17,17 @@ import org.dvsa.testing.lib.url.utils.EnvironmentType;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
 
 public class BaseAPI extends Token {
-    private static final Logger LOGGER = LogManager.getLogger(BaseAPI.class);
+    protected static final Logger LOGGER = LogManager.getLogger(BaseAPI.class);
 
-    protected static final EnvironmentType env = EnvironmentType.getEnum(Properties.get("env", true));
+    protected static EnvironmentType env = EnvironmentType.getEnum(Properties.get("env", true));
 
-    private static final Headers headers = new Headers();
+    static Headers headers = new Headers();
 
     public synchronized String adminJWT() throws HttpException {
-        var adminUser = SecretsManager.getSecretValue("adminUser");
-        var adminPassword = SecretsManager.getSecretValue("adminPassword");
+        String adminUser = SecretsManager.getSecretValue("adminUser");
+        String adminPassword = SecretsManager.getSecretValue("adminPassword");
 
         if (getAdminToken() == null || isTokenExpired(getAdminToken())) {
             LOGGER.info("Generating new admin token");
@@ -40,10 +41,10 @@ public class BaseAPI extends Token {
 
     private boolean isTokenExpired(String token) {
         try {
-            var decodedJWT = JWT.decode(token);
+            DecodedJWT decodedJWT = JWT.decode(token);
             return decodedJWT.getExpiresAt().before(new Date());
         } catch (JWTDecodeException e) {
-            LOGGER.error("Error decoding token: {}", e.getMessage());
+            LOGGER.error("Error decoding token: " + e.getMessage());
             return true;
         }
     }
@@ -52,33 +53,33 @@ public class BaseAPI extends Token {
         LOGGER.info("RequestID: {}, Method: {}, Message: {}", requestId, methodName, message);
     }
 
-    public synchronized ConcurrentHashMap<String, String> header(String requestId) throws HttpException {
+    public synchronized HashMap<String, String> header(String requestId) throws HttpException {
         headers.getApiHeader().put("Authorization", "Bearer " + adminJWT());
         logApiCall(requestId, "header", "Authorization header set.");
-        return new ConcurrentHashMap<>(headers.getApiHeader());
+        return (HashMap<String, String>) headers.getApiHeader();
     }
 
     public synchronized String fetchApplicationInformation(String applicationNumber, String jsonPath, String defaultReturn) throws HttpException {
-        var requestId = UUID.randomUUID().toString();
-        var url = URL.build(env, "application/%s/overview/".formatted(applicationNumber)).toString();
+        String requestId = UUID.randomUUID().toString();
+        String url = URL.build(env, String.format("application/%s/overview/", applicationNumber)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String fetchTMApplicationInformation(String applicationNumber, String jsonPath, String defaultReturn) throws HttpException {
-        var requestId = UUID.randomUUID().toString();
-        var url = URL.build(env, "transport-manager-application/%s".formatted(applicationNumber)).toString();
+        String requestId = UUID.randomUUID().toString();
+        String url = URL.build(env, String.format("transport-manager-application/%s", applicationNumber)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String fetchInternalUserInformation(String userId, String jsonPath, String defaultReturn) throws HttpException {
-        var requestId = UUID.randomUUID().toString();
-        var url = URL.build(env, "user/internal/%s".formatted(userId)).toString();
+        String requestId = UUID.randomUUID().toString();
+        String url = URL.build(env, String.format("user/internal/%s", userId)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String retrieveAPIData(String url, String jsonPath, String defaultReturn, String requestId) throws HttpException {
         headers.getApiHeader().put("Authorization", "Bearer " + adminJWT());
-        var response = RestUtils.get(url, headers.getApiHeader());
+        ValidatableResponse response = RestUtils.get(url, headers.getApiHeader());
 
         try {
             return response.extract().response().jsonPath().getString(jsonPath);
